mystyle.css
:root {
    --own-color-yellow: #E2B240;
    --own-color-midYellow: #AF8010;
    --own-color-darkYellow: #BC8B1E;
    --own-color-lightBrown: #4B3A32;
    --own-color-midBrown: #7B7B7B;
    --own-color-darkBrown: #241A17;
    --own-color-gray: #DDDAD3;
}

* {
    /* outline: 1px solid; */
}


/* ------ 全域 ------ */

img {
    width: 100%;
}

html,
body {
    margin: 0;
}

body {
    background-image: url("./image/bg-body.png");
    font-family: 'Oswald', sans-serif;
}

p,
span {
    font-family: 'Roboto', sans-serif;
}

img {
    width: 100%;
}

.center {
    justify-content: center;
}

.own-container {
    padding: 0;
}

.space-around {
    justify-content: space-around;
}

.j-center {
    justify-content: center;
}

.a-center {
    align-items: center;
}


/* -------- header -------- */

header {
    border-bottom: 1px solid #fff;
    padding: 35px 0;
    background-color: var(--own-color-darkBrown);
}

.nav {
    margin-left: auto;
}

header a {
    color: #fff;
    font-size: 18px;
}

header .collapse {
    margin-top: 10px;
}


/* -------------section banner------------- */

.banner-img,
.banner-content {
    padding: 0;
    height: 450px;
    background-repeat: ;
    background-size: cover;
}

.banner-img {
    background-image: url("./image/chair.jpg");
}

.banner-content {
    padding: 60px 60px 0;
    background-size: cover;
    color: var(--own-color-darkBrown);
    background-image: url("./image/bg-pattern.jpg");
}

.banner-content h2 {
    text-align: center;
    font-size: 32px;
    margin: 20px 0 30px;
    line-height: 1.4;
}

.banner-content p {
    display: -webkit-box;
    margin-bottom: 0;
    overflow: hidden;
    text-overflow: ellipsis;
    -webkit-box-orient: vertical;
    -webkit-line-clamp: 9;
    font-size: 16px;
    text-align: justify;
    line-height: 1.4;
}


/* ------seciton.gallery------ */

.gallery-card {
    background-color: var(--own-color-lightBrown);
}

.gallery-card-body {
    padding: 25px;
    min-height: 130px;
    background: url(./image/ds_border_bg_a.png) repeat-x top;
    background-size: 5px;
}

.gallery-title {
    color: var(--own-color-yellow);
    font-size: 16px;
}

.gallery-card-body p {
    color: #fff;
    font-size: 13px;
}

.gallery-card-body p:last-of-type {
    margin-bottom: 0;
}


/* ------ blog ------ */

.blog {
    background-color: #fff;
    padding: 5px 0 10px;
}

h4 {
    color: var(--own-color-midBrown);
    font-weight: 600;
    font-size: 16px;
}

.title {
    padding: 0 20px;
    margin: 0;
}

.info {
    background: url(./image/ds_border_bg_b.png) repeat-y right;
    background-size: 8px;
}

.info-text {
    padding: 30px 25px;
}

.info-text h3 {
    margin-bottom: 40px;
    font-size: 30px;
    word-spacing: 10px;
}

.blog-wrapper {
    padding-top: 30px;
}

.blog-wrapper h4 {
    padding-left: 25px;
}

.blog-article {
    padding: 0 25px;
}

.blog-item {
    font-size: 0;
    width: 100%;
    margin-bottom: 30px;
    background-color: var(--own-color-gray);
}

.blog-intro {
    display: inline-block;
    width: 50%;
    padding: 10px 15px 0;
    color: var(--own-color-lightBrown);
    vertical-align: top;
}

.blog-intro h2 {
    font-size: 18px;
    padding: 15px 0 20px;
}

.blog-intro span {
    font-size: 12px;
}

.blog-intro a {
    font-size: 14px;
    text-decoration: none;
    font-weight: 600;
    color: var(--own-color-lightBrown);
}

.img-carving,
.img-resort {
    display: inline-block;
    height: 100%;
    width: 50%;
}


/* ------.contact------ */

.contact {
    background-color: var(--own-color-yellow);
    border-top: 1px solid #fff;
    color: var(--own-color-lightBrown);
    padding: 20px 25px;
    border-top: 1px solid #fff;
    box-shadow: 0 0px 10px rgba(0, 0, 0, 0.5);
}

.contact-item {
    padding-bottom: 120px;
}

.contact h4 {
    font-size: 18px;
    color: var(--own-color-lightBrown);
    margin-bottom: 15px;
}

.visit {
    font-size: 16px;
}

.visit-card-img {
    margin-bottom: 20px;
}

.visit-card-body p {
    margin-bottom: 25px;
}

.visit-card-body h3 {
    font-family: 'Roboto', sans-serif;
    font-size: 16px;
    margin-bottom: 25px;
}

.visit-card-body a {
    font-family: 'Roboto', sans-serif;
    text-decoration: underline;
    color: var(--own-color-lightBrown);
}

.recent-item {
    font-size: 0;
    padding-bottom: 20px;
}

.rect,
.recent-content {
    vertical-align: top;
}

.rect {
    float: left;
    background-color: var(--own-color-lightBrown);
    color: #fff;
    width: 50px;
    font-weight: 600;
    text-align: center;
    font-size: 16px;
    border-radius: 5px;
}

.recent-content {
    overflow: hidden;
    padding-left: 10px;
}

.recent-content h2 {
    font-size: 16px;
}

.recent-content p {
    font-size: 14px;
}

.join form {
    padding-bottom: 20px;
}

.join input {
    width: 100%;
    border: 4px solid var(--own-color-midYellow);
    padding: 0 5px;
    margin-bottom: 5px;
}

.join input::placeholder {
    font-size: 14px;
    font-family: 'Roboto', sans-serif;
    color: var(--own-color-lightBrown);
}

.join button {
    width: 90px;
    height: 35px;
    text-align: center;
    background: url(./image/buttons.png) no-repeat;
    background-position: -10px -35px;
    border: none;
    margin-bottom: 15px;
}

.join a {
    display: block;
    text-decoration: none;
    color: #fff;
    font-size: 15px;
}


/* -----social----- */

.social {
    font-size: 0;
    padding-top: 25px;
}

.social a {
    display: inline-block;
}

.social a {
    width: 35px;
}

.social a+a {
    margin-left: 25px;
}


/* -----footer----- */

footer {
    background-color: var(--own-color-yellow);
    color: var(--own-color-midYellow);
}

footer .container {
    padding: 15px 0 20px;
}

.footer-link a {
    text-decoration: none;
    color: var(--own-color-midYellow);
}

.footer-link a+a {
    margin-left: 10px;
}

@media screen and (min-width: 768px) {
    .contact {
        padding: 35px 0 20px;
    }
    .contact-item {
        padding-bottom: 0;
    }
    .contact-item:first-of-type {
        background: url(./image/ds_border_bg_c.png) repeat-y right;
        background-size: 7px;
    }
    .contact-item:nth-of-type(3) {
        background: url(./image/ds_border_bg_c.png) repeat-y left;
        background-size: 7px;
    }
    .visit {
        padding-right: 25px;
    }
    .recent-blog {
        padding: 0 25px;
    }
    .join,
    .social {
        padding-left: 35px;
    }
    .join form {
        padding-bottom: 20px;
        background: url(./image/ds_border_bg_d.png) repeat-x bottom;
        background-size: 5px;
    }
    footer .container {
        background: url(./image/ds_border_bg_d.png) repeat-x top;
        background-size: 5px;
    }
    .footer-link {
        text-align: right;
    }
}

